--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             </a>
                         </li>
                                                 <li class="nav__item">
-                            <a href="#" class="nav__link">
-                                <i class="uil uil-user nav__icon"></i> QUALIFICATION
+                            <a href="#QUALIFICATION" class="nav__link">
+                                <i class="uil uil-user nav__icon"></i> Qualifications
                             </a>
                         </li>
                         <li class="nav__item">
